# Finite-Difference

./: FD.py  LICENSE  README.md  boop.prof  build.bash  edge_test.py  progress.txt  pyproject.toml  scratch.ipynb  speed_test.py  speed_test.py.lprof  test.py  test.py.lprof  test.txt  test_profile.prof
src/FiniteDiff/: FD.py  progress.txt  scratch.ipynb  shallow_water.py  simple_cases.ipynb  test.py  testing_install.py
src/finite_difference/: FD.py  __init__.py  profiler.py  progress.txt  test.py
