[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ephraim_finitediff"
version = "0.0.1"
authors = [
  { name="Ephraim Bryski", email="ebryski1@gmail.com"},
]
description = "Library for setting up finite difference problems"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ephraim-Bryski/Finite-Difference"
"Bug Tracker" = "https://github.com/Ephraim-Bryski/Finite-Difference/issues"

[dependencies]
"ipywidgets"  = ">=8"
"matplotlib" = ">=3.7"
"numpy" = ">=3"
"numexpr" = ">=2.8"
"itertools" = ""

